--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   </head>
   <body>
     <section class="wrapp">
-        <h1 class="repository__title">GitHub repository search.</h1>
+      <h1 class="repository__title">GitHub repository search.</h1>
       <form action="" class="form">
-        <input class="repository__input" type="search" name="search" id="searchGitRep" value="" />
+        <input
+          class="repository__input"
+          type="search"
+          name="search"
+          id="searchGitRep"
+          value=""
+        />
         <div class="repository__answer-search"></div>
       </form>
       <div class="carts"></div>
