fix space and enter

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   <body>
     <section class="wrapp">
       <h1 class="repository__title">GitHub repository search.</h1>
-      <form action="" class="form">
+      <div class="form">
         <input
           class="repository__input"
           type="search"
           name="search"
           id="searchGitRep"
-          value=""
         />
         <div class="repository__answer-search"></div>
-      </form>
+      </div>
       <div class="carts"></div>
     </section>
 
